update maven / 24